--- a/frontend/src/app/main/pages/miscellaneous/not-authorized/not-authorized.component.html
+++ b/frontend/src/app/main/pages/miscellaneous/not-authorized/not-authorized.component.html
@@ -8,8 +8,7 @@
     <div class="w-100 text-center">
       <h2 class="mb-1">You are not authorized! 🔐</h2>
       <p class="mb-2">
-        The Webtrends Marketing Lab website in IIS uses the default IUSR account credentials to access the web pages it
-        serves.
+        The government has restricted your access to this page. Please contact your administrator.
       </p>
       <a class="btn btn-primary mb-1 btn-sm-block" routerLink="/pages/authentication/login-v2" rippleEffect
         >Back to home</a
