--- a/frontend/src/app/main/apps/user/user-edit/user-edit.component.html
+++ b/frontend/src/app/main/apps/user/user-edit/user-edit.component.html
@@ -14,7 +14,7 @@
                 <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
                   <!-- users edit media object start -->
                   <div class="media mb-2">
-                    <app-initials-avatar [user]="currentRow" [size]="4.5"></app-initials-avatar>
+                    <app-initials-avatar [user]="currentRow" [size]="3.5" class="mr-1"></app-initials-avatar>
                     <div class="media-body mt-50">
                       <h4>{{ currentRow.prenom }} {{currentRow.nom}}</h4>
                       <div class="col-12 d-flex mt-1 px-0">
@@ -74,12 +74,12 @@
                               placeholder="Name"
                               name="fullName"
                               [(ngModel)]="currentRow.nom"
-                              [class.error]="accountForm.submitted && FullNameRef.invalid"
-                              #FullNameRef="ngModel"
+                              [class.error]="accountForm.submitted && LastNameRef.invalid"
+                              #LastNameRef="ngModel"
                               required
                           />
-                          <span *ngIf="accountForm.submitted && FullNameRef.invalid" class="invalid-form">
-                            <small class="form-text text-danger" *ngIf="FullNameRef.errors.required"
+                          <span *ngIf="accountForm.submitted && LastNameRef.invalid" class="invalid-form">
+                            <small class="form-text text-danger" *ngIf="LastNameRef.errors.required"
                             >This field is required!</small
                             >
                           </span>
@@ -201,10 +201,14 @@
                         </div>
                       </div>
                       <div class="col-12 d-flex flex-sm-row flex-column mt-2">
-                        <button type="submit" class="btn btn-primary mb-1 mb-sm-0 mr-0 mr-sm-1" rippleEffect>
+                        <button type="submit"
+                                (click)="submit(accountForm)"
+                                class="btn btn-primary mb-1 mb-sm-0 mr-0 mr-sm-1" rippleEffect>
                           Save Changes
                         </button>
-                        <button type="reset" class="btn btn-outline-secondary" rippleEffect>Reset</button>
+                        <button type="reset"
+                                (click)="resetFormWithDefaultValues()"
+                                class="btn btn-outline-secondary" rippleEffect>Reset</button>
                       </div>
                     </div>
                   </form>
@@ -215,7 +219,7 @@
             </li>
             <li ngbNavItem>
               <a ngbNavLink class="d-flex align-items-center"
-              ><i data-feather="share-2" class="mr-sm-50"></i><span class="d-none d-sm-block">Social</span></a
+              ><i data-feather="share-2" class="mr-sm-50"></i><span class="d-none d-sm-block">Security</span></a
               >
               <ng-template ngbNavContent>
                 <!-- Social Tab starts -->
@@ -224,7 +228,7 @@
                   <form class="form-validate">
                     <div class="row">
                       <div class="col-lg-4 col-md-6 form-group">
-                        <label for="twitter-input">Twitter</label>
+                        <label for="twitter-input">Password</label>
                         <div class="input-group input-group-merge">
                           <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon3">
@@ -233,16 +237,16 @@
                           </div>
                           <input
                               id="twitter-input"
-                              type="text"
+                              type="password"
+                              [(ngModel)]="currentRow.plainPassword"
                               class="form-control"
-                              value="https://www.twitter.com/adoptionism744"
-                              placeholder="https://www.twitter.com/"
+                              placeholder="xxxxxxxxxxxx"
                               aria-describedby="basic-addon3"
                           />
                         </div>
                       </div>
                       <div class="col-lg-4 col-md-6 form-group">
-                        <label for="facebook-input">Facebook</label>
+                        <label for="facebook-input">Confirm Password</label>
                         <div class="input-group input-group-merge">
                           <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon4">
@@ -251,16 +255,15 @@
                           </div>
                           <input
                               id="facebook-input"
-                              type="text"
+                              type="password"
                               class="form-control"
-                              value="https://www.facebook.com/adoptionism664"
-                              placeholder="https://www.facebook.com/"
+                              placeholder="xxxxxxxxxxx"
                               aria-describedby="basic-addon4"
                           />
                         </div>
                       </div>
                       <div class="col-lg-4 col-md-6 form-group">
-                        <label for="instagram-input">Instagram</label>
+                        <label for="instagram-input">Use 2FA</label>
                         <div class="input-group input-group-merge">
                           <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon5">
@@ -274,60 +277,6 @@
                               value="https://www.instagram.com/adopt-ionism744"
                               placeholder="https://www.instagram.com/"
                               aria-describedby="basic-addon5"
-                          />
-                        </div>
-                      </div>
-                      <div class="col-lg-4 col-md-6 form-group">
-                        <label for="github-input">Github</label>
-                        <div class="input-group input-group-merge">
-                          <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon9">
-                              <i class="font-medium-2" data-feather="github"></i>
-                            </span>
-                          </div>
-                          <input
-                              id="github-input"
-                              type="text"
-                              class="form-control"
-                              value="https://www.github.com/madop818"
-                              placeholder="https://www.github.com/"
-                              aria-describedby="basic-addon9"
-                          />
-                        </div>
-                      </div>
-                      <div class="col-lg-4 col-md-6 form-group">
-                        <label for="codepen-input">Codepen</label>
-                        <div class="input-group input-group-merge">
-                          <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon12">
-                              <i class="font-medium-2" data-feather="codepen"></i>
-                            </span>
-                          </div>
-                          <input
-                              id="codepen-input"
-                              type="text"
-                              class="form-control"
-                              value="https://www.codepen.com/adoptism243"
-                              placeholder="https://www.codepen.com/"
-                              aria-describedby="basic-addon12"
-                          />
-                        </div>
-                      </div>
-                      <div class="col-lg-4 col-md-6 form-group">
-                        <label for="slack-input">Slack</label>
-                        <div class="input-group input-group-merge">
-                          <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon11">
-                              <i class="font-medium-2" data-feather="slack"></i>
-                            </span>
-                          </div>
-                          <input
-                              id="slack-input"
-                              type="text"
-                              class="form-control"
-                              value="@adoptionism744"
-                              placeholder="https://www.slack.com/"
-                              aria-describedby="basic-addon11"
                           />
                         </div>
                       </div>
