--- a/frontend/src/app/layout/components/navbar/navbar-notification/navbar-notification.component.html
+++ b/frontend/src/app/layout/components/navbar/navbar-notification/navbar-notification.component.html
@@ -2,7 +2,7 @@
   <a class="nav-link" ngbDropdownToggle id="navbarNotificationDropdown"
     ><i class="ficon" data-feather="bell"></i
     ><span class="badge badge-pill badge-danger badge-up">{{
-      notifications.messages?.length + notifications.systemMessages?.length
+      notifications.length
     }}</span></a
   >
   <ul
@@ -15,7 +15,7 @@
       <div class="dropdown-header d-flex">
         <h4 class="notification-title mb-0 mr-auto">Notifications</h4>
         <div class="badge badge-pill badge-light-primary">
-          {{ notifications.messages?.length + notifications.systemMessages?.length }} New
+          {{ notifications.length }} New
         </div>
       </div>
     </li>
@@ -23,48 +23,16 @@
 
     <!-- Notifications content -->
     <li class="scrollable-container media-list" [perfectScrollbar]>
-      <a class="d-flex" href="javascript:void(0)" *ngFor="let message of notifications.messages">
+      <a class="d-flex" href="javascript:void(0)" *ngFor="let notification of notifications">
         <div class="media d-flex align-items-start">
           <div class="media-left">
             <div class="avatar">
-              <img [src]="message.image" alt="avatar" width="32" height="32" />
+              <img [src]="notification.icon" alt="avatar" width="32" height="32" />
             </div>
           </div>
           <div class="media-body">
-            <p class="media-heading" [innerHTML]="message.heading"></p>
-            <small class="notification-text">{{ message.text }}</small>
-          </div>
-        </div></a
-      >
-      <div class="media d-flex align-items-center">
-        <h6 class="font-weight-bolder mr-auto mb-0">System Notifications</h6>
-        <div class="custom-control custom-control-primary custom-switch">
-          <input
-            class="custom-control-input"
-            id="systemNotification"
-            type="checkbox"
-            [checked]="notifications.system"
-          />
-          <label class="custom-control-label" for="systemNotification"></label>
-        </div>
-      </div>
-      <a class="d-flex" href="javascript:void(0)" *ngFor="let systemMessage of notifications.systemMessages">
-        <div class="media d-flex align-items-start">
-          <div class="media-left">
-            <div
-              class="avatar"
-              [ngClass]="{
-                'bg-light-danger': systemMessage.icon === 'x',
-                'bg-light-success': systemMessage.icon === 'check',
-                'bg-light-warning': systemMessage.icon === 'alert-triangle'
-              }"
-            >
-              <div class="avatar-content"><i class="avatar-icon" [data-feather]="systemMessage.icon"></i></div>
-            </div>
-          </div>
-          <div class="media-body">
-            <p class="media-heading" [innerHTML]="systemMessage.heading"></p>
-            <small class="notification-text">{{ systemMessage.text }}</small>
+            <p class="media-heading" [innerHTML]="notification.title"></p>
+            <small class="notification-text">{{ notification.content }}</small>
           </div>
         </div></a
       >
