--- a/frontend/src/app/layout/components/navbar/navbar-notification/navbar-notification.component.html
+++ b/frontend/src/app/layout/components/navbar/navbar-notification/navbar-notification.component.html
@@ -1,21 +1,21 @@
 <li ngbDropdown class="nav-item dropdown-notification mr-25">
   <a class="nav-link" ngbDropdownToggle id="navbarNotificationDropdown"
-    ><i class="ficon" data-feather="bell"></i
-    ><span class="badge badge-pill badge-danger badge-up">{{
-      notifications.length
-    }}</span></a
-  >
+  ><i class="ficon" data-feather="bell"></i
+  ><span class="badge badge-pill badge-danger badge-up">{{
+      countUnreadNotifications()
+    }}</span>
+  </a>
   <ul
-    ngbDropdownMenu
-    aria-labelledby="navbarNotificationDropdown"
-    class="dropdown-menu dropdown-menu-media dropdown-menu-right"
+      ngbDropdownMenu
+      aria-labelledby="navbarNotificationDropdown"
+      class="dropdown-menu dropdown-menu-media dropdown-menu-right"
   >
     <!-- Notifications header -->
     <li class="dropdown-menu-header">
       <div class="dropdown-header d-flex">
         <h4 class="notification-title mb-0 mr-auto">Notifications</h4>
         <div class="badge badge-pill badge-light-primary">
-          {{ notifications.length }} New
+          {{ countUnreadNotifications() }} New
         </div>
       </div>
     </li>
@@ -23,25 +23,29 @@
 
     <!-- Notifications content -->
     <li class="scrollable-container media-list" [perfectScrollbar]>
-      <a class="d-flex" href="javascript:void(0)" *ngFor="let notification of notifications">
-        <div class="media d-flex align-items-start">
+      <a class="d-flex" routerLink="{{notification.actionUrl}}" *ngFor="let notification of notifications">
+        <div class="media d-flex align-items-start" [class.bg-light-primary]=!notification.isRead
+             (mouseover)="markAsRead(notification)">
           <div class="media-left">
             <div class="avatar">
-              <img [src]="notification.icon" alt="avatar" width="32" height="32" />
+              <div class="icon-wrapper">
+                <i [data-feather]="notification.icon" [size]="12"></i>
+              </div>
             </div>
           </div>
           <div class="media-body">
             <p class="media-heading" [innerHTML]="notification.title"></p>
             <small class="notification-text">{{ notification.content }}</small>
           </div>
-        </div></a
+        </div>
+      </a
       >
     </li>
     <!--/ Notifications content -->
 
     <!-- Notifications footer -->
     <li class="dropdown-menu-footer">
-      <a class="btn btn-primary btn-block" href="javascript:void(0)">Read all notifications</a>
+      <a class="btn btn-primary btn-block" (click)="markAllAsRead()">Read all notifications</a>
     </li>
     <!--/ Notifications footer -->
   </ul>
