--- a/frontend/src/app/main/pages/classe/nouveau-classe/nouveau-classe.component.html
+++ b/frontend/src/app/main/pages/classe/nouveau-classe/nouveau-classe.component.html
@@ -1,3 +1,5 @@
+<div    *ngIf="currentUser.role === 'ROLE_ETUDIANT' ">
+
 <div class="col mb-3">
   <div class="col-md-12 mb-3 mt-3">
     <button (click)="fileInput.click()" style="background-color: transparent; border: none;">
@@ -46,14 +48,24 @@
       <button class="btn btn-danger mr-3" (click)="cancelClick()">
 
         <i class="fas fa-ban"></i>&nbsp;
-        Annuler
+        CANCEL
       </button>
 
       <button class="btn btn-primary" (click)="enregistrerClasse()">
 
         <i class="fas fa-save"></i>&nbsp;
-        Enregitrer
+        SAVE
       </button>
     </div>
 
   </div>
+</div>
+
+<div    *ngIf="currentUser.role != 'ROLE_ETUDIANT' ">
+<div  class="alert alert-info" role="alert" >
+  <div class="d-flex justify-content-center">
+    <H1>You Should Connect As Admin To Insert Class </H1>
+  </div>
+</div>
+</div>
+
