--- a/frontend/src/app/main/pages/etudiant/etudiant-list/etudiant-list/page-etudiants.component.html
+++ b/frontend/src/app/main/pages/etudiant/etudiant-list/etudiant-list/page-etudiants.component.html
@@ -6,7 +6,7 @@
 
 
 
-              <div class="d-flex justify-content-md-end">
+              <div class="d-flex justify-content-md-between">
                   <a csvLink [data]="exportCSVData" class="btn btn-outline-primary round"rippleEffect
                   >Export CSV</a>
 
