--- a/frontend/src/app/main/pages/ecole/ecole-edit/ecole-edit.component.html
+++ b/frontend/src/app/main/pages/ecole/ecole-edit/ecole-edit.component.html
@@ -38,7 +38,7 @@
                                         <div class="row">
                                             <div class="col-md-4">
                                                 <div class="form-group">
-                                                    <label for="username">Nom Ecole</label>
+                                                    <label for="username">School name</label>
                                                     <input
                                                             type="text"
                                                             id="username"
@@ -82,7 +82,7 @@
                                             </div>
                                             <div class="col-md-4">
                                                 <div class="form-group">
-                                                    <label for="email">Telephone</label>
+                                                    <label for="email">Phone number</label>
                                                     <input
                                                             type="email"
                                                             id="tee"
@@ -104,7 +104,7 @@
                                             </div>
                                             <div class="col-md-4">
                                                 <div class="form-group">
-                                                    <label for="email">Nombre de departement</label>
+                                                    <label for="email">Number of departement</label>
                                                     <input
                                                             type="email"
                                                             id="tees"
@@ -324,10 +324,7 @@
                             </ng-template>
                         </li>
                         <li ngbNavItem>
-                            <a ngbNavLink class="d-flex align-items-center"
-                            ><i data-feather="share-2" class="mr-sm-50"></i><span
-                                    class="d-none d-sm-block">Social</span></a
-                            >
+
                             <ng-template ngbNavContent>
                                 <!-- Social Tab starts -->
                                 <div class="tab-pane" id="social" aria-labelledby="social-tab" role="tabpanel">
