--- a/frontend/src/app/main/pages/invoice/invoice.component.html
+++ b/frontend/src/app/main/pages/invoice/invoice.component.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper container-xxl p-0">
+<div class="content-wrapper container-xxl p-0" *ngIf="currentUser.role ===  'ROLE_ETUDIANT'  ||currentUser.role ===  'ROLE_PARENT' ">
     <div class="content-body">
         <section class="invoice-preview-wrapper">
             <div class="row invoice-preview">
@@ -271,4 +271,16 @@
     >
     </core-sidebar>
     <!--/  Add Payment Sidebar -->
+</div>
+<div    *ngIf=" currentUser.role !=  'ROLE_ETUDIANT'  || currentUser.role !=  'ROLE_PARENT' ">
+    <div class="d-flex justify-content-center">
+        <ngb-alert [type]="'danger'" [dismissible]="false">
+            <h4 class="alert-heading">NOT_AUTHORIZED</h4>
+            <div class="alert-body">
+                Your are on admin mode.                        Please connect as user to access this page.
+            </div>
+        </ngb-alert>
+    </div>
+
+
 </div>
